--- a/WebContent/createDoctor.html
+++ b/WebContent/createDoctor.html
@@ -6,7 +6,7 @@
 		<title>Crear Especialista</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 		<link href="./css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
-	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	  	<script src="./js/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>		
 		<!--JS Datapicker-->
