--- a/WebContent/createPayment.html
+++ b/WebContent/createPayment.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
 		<title>Registrar Pago</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
-	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	  	<script src="./js/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />		
@@ -90,7 +90,8 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li class='active'><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li><li class='last'><a href='billing.html'><span>Facturación</span></a></li>
+		
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
