--- a/WebContent/editService.html
+++ b/WebContent/editService.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
 		<title>Editar Servicio</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
-	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	  	<script src="./js/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />		
