--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,7 +11,8 @@
 	<div id="containerIni">
 		<div id="header">
 			<img alt="logo" src="./images/logo.png"/>
-        </div>           
+        </div>  
+        <div id="menu"> </div>            
        			 <div id="wrapper">
 	                        <div id="login" class="animate form">
 	                            <form  action="./mainMenu.html" > 
@@ -31,8 +32,6 @@
 	                            </form>
 	                        </div>
 	                       </div>
-	        	
-            <div id="footer"></div>
-   			</div>
+	       </div>
    </body>
 </html>
