--- a/WebContent/showMedicalFeed.html
+++ b/WebContent/showMedicalFeed.html
@@ -3,22 +3,15 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Material Médico Quirúrgico en Habitación</title>
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
-		<link href="./css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
-	  	<script src="./js/jquery-1.9.1.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>	
-		<script type="text/javascript" src="./js/functions.js"></script>
-			
-
+		<title>Ver Honorario Médico</title>
+		<link rel="stylesheet" href="/resources/demos/style.css" />
 	</head>
 	<body>
 		<div id="container">
 			<div id="header">
 	        	<img alt="logo" src="./images/logo.png"/>
 	        </div>         
-        	<nav>
+        	   	<nav>
          	<ul>
          		<li><a href="#">Bienvenido, Prueba</a></li>
                 <li><a href="pendingAdmissionDischarges.html">Altas Admisión<span class="badge green">3</span></a></li>
@@ -29,7 +22,11 @@
          	 </ul>
          </nav>        
 		<div id="menu">
-			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>
+				<ul>
+					<li class="menuitem"><a href="bank.html">Ver Cajas</a></li>
+            		<li class="menuitem"><a href="createCashBox.html">Crear Caja</a></li>
+            	</ul>	
 		    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
 			<div id='cssmenu'>
@@ -39,7 +36,7 @@
 				   <li><a href='admission.html'><span>Admisión</span></a></li>
 				   <li><a href='hospitalization.html'><span>Hospitalización</span></a></li>
 				   <li><a href='users.html'><span>Usuarios</span></a></li>
-				   <li class='has-sub active'>
+				   <li class='has-sub'>
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
@@ -51,40 +48,30 @@
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
-				   <li><a href='bank.html'><span>Cajas</span></a></li>
+				   <li ><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li><li class='last'><a href='billing.html'><span>Facturación</span></a></li>
+				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
+				   <li class='last active'><a href='billing.html'><span>Facturación</span></a></li>
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Material Médico Quirúrgico en Habitación</h2> <br><br>
-	        	<p>Para comenzar a agregar materiales, haga clic en "Agregar Nuevo". Al escoger todos los deseados, haga clic en "Aceptar".</p><br>
-	        	
-	        	<p class="button-par"> 
-	        		<input type="button" value="Agregar Nuevo" class="buttonGray"  onclick="addRowForChild('sweetTable')"> 
-	        		<input type="button" value="Eliminar Registro" class="buttonGray" onclick="deleteRowChild('sweetTable')">
-	        	</p> 
-			
-				<table id="sweetTable" style="visibility:hidden" >
-				<tr>
-					 <th style="width: 20%; text-align:center">Id</th>
-					 <th style="width: 40%; text-align:center">Nombre</th>
-					 <th style="width: 20%; text-align:center">Cantidad</th>
-					 <th style="width: 20%; text-align:center">Seleccione para Eliminar</th>
-				</tr>         
-				</table><br>
-				 <div id="botonera" style="margin-top: -3px;">
-					<form action="./createProtocol.html">
-						<div id="botonP" style="display: none; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Aceptar" />
-						</div>	
+	        	<h2>Detalle Honorario:</h2>   
+	        	<br>
+				<p>
+			   	<b>Especialista:</b> Juan Pérez<br><br>
+			    <b>N° de factura:</b> F-24410<br><br>
+			    <b>Fecha de la factura:</b> 05/10/2013<br><br>
+			    <b>Monto a cobrar:</b> Bs. 5000,00<br><br>
+			    <b>Cargo desempeñado:</b> Cirujano Ayudante<br><br>
+			    <br><br>
+			    </p>
+				<div id="botonera" >
+					<form action="#">
 						<div id="botonV" style="display: inline;">
-								<input type="button" class="button" value="Cancelar" onClick="javascript:history.back();" />		
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
 						</div>	
 					</form>
 				</div>
-				
-			
 			</div>
 		</div>
 	</body>
