scroll para evitar botones bajen en crear/editar responsable

--- a/WebContent/createPaymentResponsible.html
+++ b/WebContent/createPaymentResponsible.html
@@ -93,7 +93,7 @@
 				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li><li class='last'><a href='billing.html'><span>Facturación</span></a></li>
 				</ul>
 			</div>
-        	<div id="content" style="position:absolute;">	
+        	<div id="content" style="position:absolute; overflow-y: scroll;">	
 	        	<h2>Crear Responsable de Pago:</h2>
 				<br>
 				<fieldset>
