--- a/WebContent/editPaymentResponsible.html
+++ b/WebContent/editPaymentResponsible.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -94,7 +94,7 @@
 				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li><li class='last'><a href='billing.html'><span>Facturación</span></a></li>
 				</ul>
 			</div>
-        	<div id="content" style="position:absolute;">	
+        	<div id="content" style="position:absolute; overflow-y: scroll;">	
 	        	<h2>Editar Responsable de Pago:</h2>
 				<br>
 				<fieldset>
